--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 		<title>高招产品案例集锦</title>
         <meta name="keywords" content="案例集锦,手机网站,视频访谈,掌上校园,全景漫游,中国教育在线" />
 		<meta name="description" content="高校手机网站是中国教育在线开发的全新移动宣传产品。通过为高校量身打造移动端网站，使考生和家长能直接在手机上了解和查询学校的相关信息，促进高校资讯在社交平台上的便捷传播，从而实现高校的招生推广和宣传目的。" />
-		<link rel="stylesheet" href="http://www.eol.cn/html/uc/2017cases/css/css.css" />
-        <script src="http://apps.bdimg.com/libs/jquery/1.9.1/jquery.js"></script>
+		<link rel="stylesheet" href="./css/css.css" />
 	</head>
 	<body>
     <div style="display:none;"><img src="http://www.eol.cn/html/uc/2017cases/img/logo2.png" alt="" /></div>
