--- a/hym.html
+++ b/hym.html
@@ -1,28 +1,29 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=640, target-densitydpi=device-dpi, user-scalable=no">
-		<title>高招产品案例集锦_薅羊毛</title>
-        <meta name="keywords" content="视频访谈,手机网站,视频访谈,掌上校园,全景漫游,中国教育在线" />
-		<meta name="description" content="中国教育在线全新推出的移动端高招宣传产品——「薅羊毛」是基于微信公共平台开发的H5页面游戏，面向所有微信注册用户。参与者通过填写个人资料参与游戏，并通过“助力”模式引导其将游戏通过微信朋友圈分享给好友，并邀请好友“助力”薅羊毛来增加积分。通过“链式传播”，使得高校招生信息得以从本校师生逐步扩散至社会范围内的潜在目标考生。" />
-		<link rel="stylesheet" href="http://www.eol.cn/html/uc/2017cases/css/css.css" />
-        <script src="http://apps.bdimg.com/libs/jquery/1.9.1/jquery.js"></script>
-	</head>
-	<body>
-<div style="display:none;"><img src="http://www.eol.cn/html/uc/2017cases/img/logo2.png" alt="" /></div>
-		<div class="hym">
-			<div class="banner">
 
-		    </div>
-		    <div class="fl">
-			   <h2>薅羊毛</h2>
-		    </div>
-		    <div class="introduce">
-			   <img class="leibie" src="http://www.eol.cn/html/uc/2017cases/img/yang2.png"/>
-			   <p class="jieshao">中国教育在线全新推出的移动端高招宣传产品——「薅羊毛」是基于微信公共平台开发的H5页面游戏，面向所有微信注册用户。参与者通过填写个人资料参与游戏，并通过“助力”模式引导其将游戏通过微信朋友圈分享给好友，并邀请好友“助力”薅羊毛来增加积分。通过“链式传播”，使得高校招生信息得以从本校师生逐步扩散至社会范围内的潜在目标考生。</p>
-		    </div>
-		    <div class="demo">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=640, target-densitydpi=device-dpi, user-scalable=no">
+	<title>高招产品案例集锦_薅羊毛</title>
+	<meta name="keywords" content="视频访谈,手机网站,视频访谈,掌上校园,全景漫游,中国教育在线" />
+	<meta name="description" content="中国教育在线全新推出的移动端高招宣传产品——「薅羊毛」是基于微信公共平台开发的H5页面游戏，面向所有微信注册用户。参与者通过填写个人资料参与游戏，并通过“助力”模式引导其将游戏通过微信朋友圈分享给好友，并邀请好友“助力”薅羊毛来增加积分。通过“链式传播”，使得高校招生信息得以从本校师生逐步扩散至社会范围内的潜在目标考生。" />
+	<link rel="stylesheet" href="./css/css.css" />
+</head>
+
+<body>
+	<div style="display:none;"><img src="http://www.eol.cn/html/uc/2017cases/img/logo2.png" alt="" /></div>
+	<div class="hym">
+		<div class="banner">
+
+		</div>
+		<div class="fl">
+			<h2>薅羊毛</h2>
+		</div>
+		<div class="introduce">
+			<img class="leibie" src="http://www.eol.cn/html/uc/2017cases/img/yang2.png" />
+			<p class="jieshao">中国教育在线全新推出的移动端高招宣传产品——「薅羊毛」是基于微信公共平台开发的H5页面游戏，面向所有微信注册用户。参与者通过填写个人资料参与游戏，并通过“助力”模式引导其将游戏通过微信朋友圈分享给好友，并邀请好友“助力”薅羊毛来增加积分。通过“链式传播”，使得高校招生信息得以从本校师生逐步扩散至社会范围内的潜在目标考生。</p>
+		</div>
+		<div class="demo">
 			<ul>
 				<li><img src="http://www.eol.cn/html/uc/2017cases/img/shouzhi.png" /><a href="http://g.eol.cn/campaign15/campaign15">1.“薅羊毛”模版</a></li>
 				<li><img src="http://www.eol.cn/html/uc/2017cases/img/shouzhi.png" /><a href="http://g.eol.cn/campaign14/campaign14">2.“种樱花”模版</a></li>
@@ -31,32 +32,32 @@
 				<li><img src="http://www.eol.cn/html/uc/2017cases/img/shouzhi.png" /><a href="http://g.eol.cn/campaign8/campaign8">5.“微游”模版</a></li>
 
 			</ul>
-		    </div>
-		    <a class="bk" href="index.shtml" style="display: block;width: 200px;height: 58px;background: #BF0303;color: #FFFFFF;font-size: 24px;line-height: 58px;text-align: center;margin: 0 auto;border-radius:10px ;text-decoration: none;">返&nbsp;&nbsp;&nbsp;&nbsp;回</a>
+		</div>
+		<a class="bk" href="index.shtml" style="display: block;width: 200px;height: 58px;background: #BF0303;color: #FFFFFF;font-size: 24px;line-height: 58px;text-align: center;margin: 0 auto;border-radius:10px ;text-decoration: none;">返&nbsp;&nbsp;&nbsp;&nbsp;回</a>
 
-		    <!--<div class="back">
+		<!--<div class="back">
 				<img  class="return" src="img/back.png"/>
 			  </div>-->
-		    <div class="bottom"></div>
-		</div>
-<!--        	<div style="width:1px;height:1px;overflow:hidden;">
+		<div class="bottom"></div>
+	</div>
+	<!--        	<div style="width:1px;height:1px;overflow:hidden;">
 <script src="https://s11.cnzz.com/z_stat.php?id=1261026061&web_id=1261026061" language="JavaScript"></script>
 	</div>-->
 
-<script src="http://www.eol.cn/js/common/plugin/utf-8/weixin.share.min.js"></script>
-<script type="text/javascript">
-if($('body').height()>$('.hym').height())
-        		{
-        			$('.bottom').attr('class','foot');
-        		}else{
-        			$('.foot').attr('class','bottom');
-        		}
- new weixinShare({
-     'title':'高招产品案例集锦_薅羊毛',
-     'link': 'http://www.eol.cn/html/uc/2017cases/index.shtml',  //落地页地址，默认为空，要填上通过分享链接点开后所指向的链接地址
-     'image': 'http://www.eol.cn/html/uc/2017cases/img/logo2.png', // 图片地址
-     'desc': '「薅羊毛」是基于微信公共平台开发的H5页面游戏，面向所有微信注册用户',
-  });
-</script>
-	</body>
+	<script src="http://www.eol.cn/js/common/plugin/utf-8/weixin.share.min.js"></script>
+	<script type="text/javascript">
+		if ($('body').height() > $('.hym').height()) {
+			$('.bottom').attr('class', 'foot');
+		} else {
+			$('.foot').attr('class', 'bottom');
+		}
+		new weixinShare({
+			'title': '高招产品案例集锦_薅羊毛',
+			'link': 'http://www.eol.cn/html/uc/2017cases/index.shtml', //落地页地址，默认为空，要填上通过分享链接点开后所指向的链接地址
+			'image': 'http://www.eol.cn/html/uc/2017cases/img/logo2.png', // 图片地址
+			'desc': '「薅羊毛」是基于微信公共平台开发的H5页面游戏，面向所有微信注册用户',
+		});
+	</script>
+</body>
+
 </html>
