--- a/qtsp.html
+++ b/qtsp.html
@@ -1,58 +1,59 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=640, target-densitydpi=device-dpi, user-scalable=no">
-		<title>高招产品案例集锦_其它视频</title>
-        <meta name="keywords" content="视频访谈,手机网站,视频访谈,掌上校园,全景漫游,中国教育在线" />
-		<meta name="description" content="高校手机网站是中国教育在线开发的全新移动宣传产品。通过为高校量身打造移动端网站，使考生和家长能直接在手机上了解和查询学校的相关信息，促进高校资讯在社交平台上的便捷传播，从而实现高校的招生推广和宣传目的。" />
-		<link rel="stylesheet" href="http://www.eol.cn/html/uc/2017cases/css/css.css" />
-        <script src="http://apps.bdimg.com/libs/jquery/1.9.1/jquery.js"></script>
-	</head>
-	<body>
-<div style="display:none;"><img src="http://www.eol.cn/html/uc/2017cases/img/logo2.png" alt="" /></div>
-		<div class="qtspal">
-			<div class="banner">
 
-		    </div>
-		    <div class="fl">
-			   <h2>其它视频案例</h2>
-		    </div>
-		    <!--<div class="introduce">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=640, target-densitydpi=device-dpi, user-scalable=no">
+	<title>高招产品案例集锦_其它视频</title>
+	<meta name="keywords" content="视频访谈,手机网站,视频访谈,掌上校园,全景漫游,中国教育在线" />
+	<meta name="description" content="高校手机网站是中国教育在线开发的全新移动宣传产品。通过为高校量身打造移动端网站，使考生和家长能直接在手机上了解和查询学校的相关信息，促进高校资讯在社交平台上的便捷传播，从而实现高校的招生推广和宣传目的。" />
+	<link rel="stylesheet" href="./css/css.css" />
+</head>
+
+<body>
+	<div style="display:none;"><img src="http://www.eol.cn/html/uc/2017cases/img/logo2.png" alt="" /></div>
+	<div class="qtspal">
+		<div class="banner">
+
+		</div>
+		<div class="fl">
+			<h2>其它视频案例</h2>
+		</div>
+		<!--<div class="introduce">
 			   <img class="leibie" src="http://www.eol.cn/html/uc/2017cases/img/qtvido2.png"/>
 			   <p class="jieshao">为了贴合当下考生更乐于通过动态视频获取高校相关资讯的习惯，中国教育在线集结精锐力量重磅推出了一站式全景动态视频服务——“校园全景航拍视频”，为高校打造定制化的航拍宣传片。中国教育在线会派出资深策划团队定制详细的拍摄计划，由专业拍摄人员提供相关拍摄服务，并提供完善的后期素材处理及上传播放服务。</p>
 		    </div>-->
-		    <div class="demo">
+		<div class="demo">
 			<ul>
 				<li><img src="http://www.eol.cn/html/uc/2017cases/img/shouzhi.png" /><a href="https://mp.weixin.qq.com/s?__biz=MjM5MjIwNzU4MA==&mid=401601579&idx=1&sn=8930350a9a5b477a21fb18468bb58e6e&mpshare=1&scene=1&srcid=1230UoQi9iG5zLd8DVrnH2sN&key=564c3e9811aee0ab0ce24e2eb78a9092993415f4de82d48daeb6e9ce0b18e1177d2d69b6246af95c33f3538a212526e1c292a81c9e1fc9de6db6680836ea9d4312f0696a2058d4b123f35adc02247cc3&ascene=0&uin=MTA0NTQ2ODA4MA%3D%3D&devicetype=iMac+MacBookAir6%2C2+OSX+OSX+10.12.2+build(16C67)&version=12010110&nettype=WIFI&fontScale=100&pass_ticket=7x6l6RcvzcMURnhYrco79LTTk07y%2Bfph1WDLdiLkVCkIpAHyASL53PV4Cb846he6">1.舌尖上的高校——北京吉利学院</a></li>
 				<li><img src="http://www.eol.cn/html/uc/2017cases/img/shouzhi.png" /><a href="http://msite.eol.cn/375/116541.shtml">2.哈尔滨医科大学招生宣传片</a></li>
 
 			</ul>
-		    </div>
-		    <a class="bk" href="index.shtml" style="display: block;width: 200px;height: 58px;background: #BF0303;color: #FFFFFF;font-size: 24px;line-height: 58px;text-align: center;margin: 0 auto;border-radius:10px ;text-decoration: none;">返&nbsp;&nbsp;&nbsp;&nbsp;回</a>
+		</div>
+		<a class="bk" href="index.shtml" style="display: block;width: 200px;height: 58px;background: #BF0303;color: #FFFFFF;font-size: 24px;line-height: 58px;text-align: center;margin: 0 auto;border-radius:10px ;text-decoration: none;">返&nbsp;&nbsp;&nbsp;&nbsp;回</a>
 
-		   <!-- <div class="back">
+		<!-- <div class="back">
 				<img class="return"  src="img/back.png"/>
 			  </div>-->
-		    <div class="bottom"></div>
-		</div>
-<!--        	<div style="width:1px;height:1px;overflow:hidden;">
+		<div class="bottom"></div>
+	</div>
+	<!--        	<div style="width:1px;height:1px;overflow:hidden;">
 <script src="https://s11.cnzz.com/z_stat.php?id=1261026061&web_id=1261026061" language="JavaScript"></script>
 	</div>-->
-<script src="http://www.eol.cn/js/common/plugin/utf-8/weixin.share.min.js"></script>
-<script type="text/javascript">
-if($('body').height()>$('.qtspal').height())
-        		{
-        			$('.bottom').attr('class','foot');
-        		}else{
-        			$('.foot').attr('class','bottom');
-        		}
-  new weixinShare({
-     'title':'高招产品案例集锦_其它视频',
-     'link': 'http://www.eol.cn/html/uc/2017cases/index.shtml',  //落地页地址，默认为空，要填上通过分享链接点开后所指向的链接地址
-     'image': 'http://www.eol.cn/html/uc/2017cases/img/logo2.png', // 图片地址
-     'desc': '“高招宣传系列视频”多重角度为学校量身打造的视频类招生宣传精品栏目',
-});
-</script>
-	</body>
+	<script src="http://www.eol.cn/js/common/plugin/utf-8/weixin.share.min.js"></script>
+	<script type="text/javascript">
+		if ($('body').height() > $('.qtspal').height()) {
+			$('.bottom').attr('class', 'foot');
+		} else {
+			$('.foot').attr('class', 'bottom');
+		}
+		new weixinShare({
+			'title': '高招产品案例集锦_其它视频',
+			'link': 'http://www.eol.cn/html/uc/2017cases/index.shtml', //落地页地址，默认为空，要填上通过分享链接点开后所指向的链接地址
+			'image': 'http://www.eol.cn/html/uc/2017cases/img/logo2.png', // 图片地址
+			'desc': '“高招宣传系列视频”多重角度为学校量身打造的视频类招生宣传精品栏目',
+		});
+	</script>
+</body>
+
 </html>
