--- a/zsxy.html
+++ b/zsxy.html
@@ -1,59 +1,60 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=640, target-densitydpi=device-dpi, user-scalable=no">
-		<title>高招产品案例集锦_校园游戏</title>
-        <meta name="keywords" content="视频访谈,手机网站,视频访谈,掌上校园,全景漫游,中国教育在线" />
-		<meta name="description" content="“掌上校园”产品是中国教育在线全新推出的一款集合了手机游戏、VR全景、多媒体展示等多种元素的招生宣传移动H5产品。用户通过引导自己绘制的简笔“火柴人”形象，分别进入合作高校的图书馆、实验室、宿舍等场景，并在其中浏览与该场景相对应的院校信息多媒体介绍。" />
-		<link rel="stylesheet" href="http://www.eol.cn/html/uc/2017cases/css/css.css" />
-        <script src="http://apps.bdimg.com/libs/jquery/1.9.1/jquery.js"></script>
-	</head>
-	<body>
-<div style="display:none;"><img src="http://www.eol.cn/html/uc/2017cases/img/logo2.png" alt="" /></div>
-		<div class="zsxy">
-			<div class="banner">
-			  
-		    </div>
-		    <div class="fl">
-			   <h2>校园游戏</h2>
-		    </div>
-		    <div class="introduce">
-			   <img class="leibie" src="http://www.eol.cn/html/uc/2017cases/img/zhangshang2.png"/>
-			   <p class="jieshao">《掌上校园》与《夺宝奇兵》产品是中国教育在线全新推出的两款集合了手机游戏、VR全景、多媒体展示等多种元素的招生宣传移动H5产品。用户通过引导自己绘制的简笔“火柴人”形象，分别进入合作高校的多个场景进行浏览，并进行互动。</p>
-		    </div>
-		    <div class="demo">
+
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=640, target-densitydpi=device-dpi, user-scalable=no">
+	<title>高招产品案例集锦_校园游戏</title>
+	<meta name="keywords" content="视频访谈,手机网站,视频访谈,掌上校园,全景漫游,中国教育在线" />
+	<meta name="description" content="“掌上校园”产品是中国教育在线全新推出的一款集合了手机游戏、VR全景、多媒体展示等多种元素的招生宣传移动H5产品。用户通过引导自己绘制的简笔“火柴人”形象，分别进入合作高校的图书馆、实验室、宿舍等场景，并在其中浏览与该场景相对应的院校信息多媒体介绍。" />
+	<link rel="stylesheet" href="./css/css.css" />
+</head>
+
+<body>
+	<div style="display:none;"><img src="http://www.eol.cn/html/uc/2017cases/img/logo2.png" alt="" /></div>
+	<div class="zsxy">
+		<div class="banner">
+
+		</div>
+		<div class="fl">
+			<h2>校园游戏</h2>
+		</div>
+		<div class="introduce">
+			<img class="leibie" src="http://www.eol.cn/html/uc/2017cases/img/zhangshang2.png" />
+			<p class="jieshao">《掌上校园》与《夺宝奇兵》产品是中国教育在线全新推出的两款集合了手机游戏、VR全景、多媒体展示等多种元素的招生宣传移动H5产品。用户通过引导自己绘制的简笔“火柴人”形象，分别进入合作高校的多个场景进行浏览，并进行互动。</p>
+		</div>
+		<div class="demo">
 			<ul>
 				<li><img src="http://www.eol.cn/html/uc/2017cases/img/shouzhi.png" /><a href="http://zsxy.mgame.eol.cn/zsxy/makeper">1.掌上校园（通用版）</a></li>
 				<li><img src="http://www.eol.cn/html/uc/2017cases/img/shouzhi.png" /><a href="http://zsxy.mgame.eol.cn/zsxy/ahls">2.掌上校园（至尊定制版）</a></li>
-                <li><img src="http://www.eol.cn/html/uc/2017cases/img/shouzhi.png" /><a href="http://zsxy.mgame.eol.cn/zsxy/hefeiScene">3.掌上校园（增强定制版）</a></li>
-                <li><img src="http://www.eol.cn/html/uc/2017cases/img/shouzhi.png" /><a href="http://mgame.eol.cn/duobao/duobao/index ">4.夺宝奇兵</a></li>
+				<li><img src="http://www.eol.cn/html/uc/2017cases/img/shouzhi.png" /><a href="http://zsxy.mgame.eol.cn/zsxy/hefeiScene">3.掌上校园（增强定制版）</a></li>
+				<li><img src="http://www.eol.cn/html/uc/2017cases/img/shouzhi.png" /><a href="http://mgame.eol.cn/duobao/duobao/index ">4.夺宝奇兵</a></li>
 			</ul>
-		    </div>
-		    <a class="bk" href="index.shtml" style="display: block;width: 200px;height: 58px;background: #BF0303;color: #FFFFFF;font-size: 24px;line-height: 58px;text-align: center;margin: 0 auto;border-radius:10px ;text-decoration: none;">返&nbsp;&nbsp;&nbsp;&nbsp;回</a>
-		    
-		   <!-- <div class="back">
+		</div>
+		<a class="bk" href="index.shtml" style="display: block;width: 200px;height: 58px;background: #BF0303;color: #FFFFFF;font-size: 24px;line-height: 58px;text-align: center;margin: 0 auto;border-radius:10px ;text-decoration: none;">返&nbsp;&nbsp;&nbsp;&nbsp;回</a>
+
+		<!-- <div class="back">
 				<img class="return"  src="img/back.png"/>
 			  </div>-->
-		    <div class="bottom"></div>
-		</div>
-<!--        	<div style="width:1px;height:1px;overflow:hidden;">
+		<div class="bottom"></div>
+	</div>
+	<!--        	<div style="width:1px;height:1px;overflow:hidden;">
 <script src="https://s11.cnzz.com/z_stat.php?id=1261026061&web_id=1261026061" language="JavaScript"></script>
 	</div>-->
-<script src="http://www.eol.cn/js/common/plugin/utf-8/weixin.share.min.js"></script>
-<script type="text/javascript">
-if($('body').height()>$('.zsxy').height())
-        		{
-        			$('.bottom').attr('class','foot');
-        		}else{
-        			$('.foot').attr('class','bottom');
-        		}
- new weixinShare({
-     'title':'高招产品案例集锦_校园游戏',
-     'link': 'http://www.eol.cn/html/uc/2017cases/index.shtml',  //落地页地址，默认为空，要填上通过分享链接点开后所指向的链接地址
-     'image': 'http://www.eol.cn/html/uc/2017cases/img/logo2.png', // 图片地址
-     'desc': '“校园游戏”产品是eol全新推出的一款集合多种元素的招生宣传移动H5产品',
-});
-</script>
-	</body>
+	<script src="http://www.eol.cn/js/common/plugin/utf-8/weixin.share.min.js"></script>
+	<script type="text/javascript">
+		if ($('body').height() > $('.zsxy').height()) {
+			$('.bottom').attr('class', 'foot');
+		} else {
+			$('.foot').attr('class', 'bottom');
+		}
+		new weixinShare({
+			'title': '高招产品案例集锦_校园游戏',
+			'link': 'http://www.eol.cn/html/uc/2017cases/index.shtml', //落地页地址，默认为空，要填上通过分享链接点开后所指向的链接地址
+			'image': 'http://www.eol.cn/html/uc/2017cases/img/logo2.png', // 图片地址
+			'desc': '“校园游戏”产品是eol全新推出的一款集合多种元素的招生宣传移动H5产品',
+		});
+	</script>
+</body>
+
 </html>
