--- a/zsxy.html
+++ b/zsxy.html
@@ -31,7 +31,7 @@
 				<li><img src="http://www.eol.cn/html/uc/2017cases/img/shouzhi.png" /><a href="http://mgame.eol.cn/duobao/duobao/index ">4.夺宝奇兵</a></li>
 			</ul>
 		</div>
-		<a class="bk" href="index.shtml" style="display: block;width: 200px;height: 58px;background: #BF0303;color: #FFFFFF;font-size: 24px;line-height: 58px;text-align: center;margin: 0 auto;border-radius:10px ;text-decoration: none;">返&nbsp;&nbsp;&nbsp;&nbsp;回</a>
+		<a class="bk" href="index.html" style="display: block;width: 200px;height: 58px;background: #BF0303;color: #FFFFFF;font-size: 24px;line-height: 58px;text-align: center;margin: 0 auto;border-radius:10px ;text-decoration: none;">返&nbsp;&nbsp;&nbsp;&nbsp;回</a>
 
 		<!-- <div class="back">
 				<img class="return"  src="img/back.png"/>
