--- a/files/beer/index.html
+++ b/files/beer/index.html
@@ -163,7 +163,7 @@
 
   </div>
 
-  <script  src="http://m.lsa0.cn/static/js/jquery-2.1.1.min.js"></script>
+  <script  src="../js/jquery.js"></script>
   <!-- <script  src="http://m.lsa0.cn/static/js/hlsjs.js"></script> -->
   <script  src="./js/chachu.js"></script>
   <script>
