--- a/files/huaxiaoren/index.html
+++ b/files/huaxiaoren/index.html
@@ -228,7 +228,7 @@
 
 
     <!-- <script src="./js/jquery-2.1.4.js"></script> -->
-    <script src="http://www.eol.cn/js/common/jquery/2.0/jquery.js"></script>
+    <script  src="../js/jquery.js"></script>
     <script src="./js/snabbt.min.js"></script>
     <script>
     $(window).load(function () {
