--- a/files/luoboke/index.html
+++ b/files/luoboke/index.html
@@ -162,7 +162,7 @@
     <!-- <script  src="/static/js/jquery-2.1.1.min.js"></script>
     <script  src="/static/js/common.js"></script>
     <script  src="/static/js/hlsjs.js"></script> -->
-    <script src='http://www.eol.cn/js/common/jquery/1.0/jquery.js'></script>
+    <script  src="../js/jquery.js"></script>
     <script>
     $(window).load(function () {
       $('#webContent').css('overflow','auto');
