--- a/files/xidada/index.html
+++ b/files/xidada/index.html
@@ -91,7 +91,7 @@
     </div>
 
 
-    <script src="http://www.eol.cn/js/common/jquery/2.0/jquery.js"></script>
+    <script  src="../js/jquery.js"></script>
     <script src="./js/snabbt.min.js"></script>
     <script>
     $(window).load(function () {
