--- a/files/yetai/index.html
+++ b/files/yetai/index.html
@@ -154,7 +154,7 @@
     <script  src="/static/js/jquery-2.1.1.min.js"></script>
     <script  src="/static/js/common.js"></script>
     <script  src="/static/js/hlsjs.js"></script> -->
-    <script src='http://www.eol.cn/js/common/jquery/1.0/jquery.js'></script>
+    <script  src="../js/jquery.js"></script>
     <script>
     $(window).load(function () {
       $('.item3').css('height',$('#webContent').height());
