--- a/files/huaxiaoren/index.html
+++ b/files/huaxiaoren/index.html
@@ -227,7 +227,7 @@
     </div>
 
 
-    <script  src="../js/jquery1.js"></script>
+    <script  src="../js/jquery.js"></script>
     <script src="./js/snabbt.min.js"></script>
     <script>
     $(window).load(function () {
