--- a/files/xidada/index.html
+++ b/files/xidada/index.html
@@ -91,7 +91,7 @@
     </div>
 
 
-    <script  src="../js/jquery1.js"></script>
+    <script  src="../js/jquery.js"></script>
     <script>
     $(window).load(function () {
       // loading页面
