--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
 	<div class="bd">
 		<div class="main">
 			<ul>
-				<li class="l4"><a href="./files/beer/index.html"></a><img src="http://www.eol.cn/html/uc/2017cases/img/shouji.png" />揭盖有惊喜</li>
-				<li class="l5"><a href="./files/huaxiaoren/index.html"></a><img src="http://www.eol.cn/html/uc/2017cases/img/zhangshang.png" />画小人上大学</li>
-				<li class="l2"><a href="./files/xidada/index.html"></a><img src="http://www.eol.cn/html/uc/2017cases/img/yang.png" />电话祝福</li>
+				<li class="l4"><a href="./files/beer/index.html"></a><img src="http://www.eol.cn/html/uc/2017cases/img/zhangshang.png" />揭盖有惊喜</li>
+				<li class="l5"><a href="./files/huaxiaoren/index.html"></a><img src="http://www.eol.cn/html/uc/2017cases/img/yang.png" />画小人上大学</li>
+				<li class="l2"><a href="./files/xidada/index.html"></a><img src="http://www.eol.cn/html/uc/2017cases/img/shouji.png" />电话祝福</li>
 			</ul>
 			<ul>
-				<li class="l3"><a href="./files/yetai/index.html"></a><img src="http://www.eol.cn/html/uc/2017cases/img/fangtan.png" />椰泰扫码</li>
-				<li class="l7"><a href="./files/jiehu/index.html"></a><img src="http://www.eol.cn/html/uc/2017cases/img/hangpai.png" />截虎扫码</li>
-				<li class="l8"><a href="./files/luoboke/index.html"></a><img src="http://www.eol.cn/html/uc/2017cases/img/qtvido.png" />罗伯克扫码</li>
+				<li class="l3"><a href="http://mgame.eol.cn/ebook/8#p=1"></a><img src="http://www.eol.cn/html/uc/2017cases/img/fangtan.png" />电子书</li>
+				<li class="l7"><a href="./files/jiehu/index.html"></a><img src="http://www.eol.cn/html/uc/2017cases/img/hangpai.png" />摇一摇抽奖</li>
+				<li class="l8"><a href="http://g.eol.cn/campaign15/campaign15"></a><img src="http://www.eol.cn/html/uc/2017cases/img/qtvido.png" />薅羊毛</li>
 			</ul>
 			<ul>
-				<li class='l1'><a href="./files/saoma/index.html?newuser=1&jiang=0&monery=9.82"></a><img src="http://www.eol.cn/html/uc/2017cases/img/quanjing.png" />开袋扫码</li>
-				<li class="l6"><a href="http://zsxy.mgame.eol.cn/zsxy/hefeiScene/"></a><img src="http://www.eol.cn/html/uc/2017cases/img/shousuo.png" />全景游戏</li>
+				<li class='l1'><a href="./files/saoma/index.html?newuser=1&jiang=0&monery=9.82"></a><img src="http://www.eol.cn/html/uc/2017cases/img/shousuo.png" />开袋扫码</li>
+				<li class="l6"><a href="http://zsxy.mgame.eol.cn/zsxy/hefeiScene/"></a><img src="http://www.eol.cn/html/uc/2017cases/img/quanjing.png" />全景游戏</li>
 				<li class="l9"><a href="h5.html"></a><img src="http://www.eol.cn/html/uc/2017cases/img/yingyon.png" />其它H5产品</li>
 			</ul>
 		</div>
