--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=640, target-densitydpi=device-dpi, user-scalable=no">
 	<title>硕博通产品案例集锦</title>
-	<meta name="keywords" content="案例集锦,手机网站,视频访谈,掌上校园,全景漫游,硕博通" />
-	<meta name="description" content="高校手机网站是硕博通开发的全新移动宣传产品。通过为高校量身打造移动端网站，使考生和家长能直接在手机上了解和查询学校的相关信息，促进高校资讯在社交平台上的便捷传播，从而实现高校的招生推广和宣传目的。" />
+	<meta name="keywords" content="案例集锦,手机网站,扫码h5,摇一摇,全景漫游,硕博通" />
+	<meta name="description" content="案例集锦,手机网站,扫码h5,摇一摇,全景漫游,硕博通" />
 	<link rel="stylesheet" href="./css/css.css" />
 </head>
 
