--- a/h5.html
+++ b/h5.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-	<meta charset="UTF-8">
+	<meta charset="utf-8" />
 	<meta name="viewport" content="width=640, target-densitydpi=device-dpi, user-scalable=no">
-	<title>高招产品案例集锦_其它H5产品</title>
-	<meta name="keywords" content="视频访谈,手机网站,视频访谈,掌上校园,全景漫游,中国教育在线" />
-	<meta name="description" content="高校手机网站是中国教育在线开发的全新移动宣传产品。通过为高校量身打造移动端网站，使考生和家长能直接在手机上了解和查询学校的相关信息，促进高校资讯在社交平台上的便捷传播，从而实现高校的招生推广和宣传目的。" />
+	<title>硕博通产品案例集锦</title>
+	<meta name="keywords" content="案例集锦,手机网站,扫码h5,摇一摇,全景漫游,硕博通" />
+	<meta name="description" content="案例集锦,手机网站,扫码h5,摇一摇,全景漫游,硕博通" />
 	<link rel="stylesheet" href="./css/css.css" />
 </head>
 
